parser.output
Grammar

    0 $accept: Program $end

    1 Program: Procedure Procedures

    2 Procedures: ε
    3           | Procedure Procedures

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    5 ParamList: ε
    6          | Param
    7          | ParamList SEMICOLON Param

    8 Param: IDList COLON Type

    9 IDList: IDENTIFIER
   10       | IDENTIFIER COMMA IDList

   11 Body: Procedures Declarations Statements Return

   12 Return: RETURN Expression SEMICOLON

   13 Declarations: ε
   14             | Declaration Declarations

   15 Declaration: VAR IDList COLON Type SEMICOLON
   16            | VAR IDList COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

   17 Statements: ε
   18           | Statement Statements

   19 Statement: LHS EQUAL Expression SEMICOLON
   20          | LHS EQUAL STRING_LITERAL SEMICOLON
   21          | LHS EQUAL IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON
   22          | IF LPAREN Expression RPAREN Block
   23          | IF LPAREN Expression RPAREN Block ELSE Block
   24          | WHILE LPAREN Expression RPAREN Block
   25          | Block

   26 LHS: IDENTIFIER
   27    | IDENTIFIER LBRACKET Expression RBRACKET
   28    | DEREFERENCE IDENTIFIER

   29 ExpressionListOpt: ExpressionList
   30                  | ε

   31 ExpressionList: Expression COMMA ExpressionList
   32               | Expression

   33 Expression: LPAREN Expression RPAREN
   34           | BAR Expression BAR
   35           | AMP LHS
   36           | Expression AND Expression
   37           | Expression DIV Expression
   38           | Expression EQUALS Expression
   39           | Expression GT Expression
   40           | Expression GTE Expression
   41           | Expression LT Expression
   42           | Expression LTE Expression
   43           | Expression MINUS Expression
   44           | Expression NOTEQUAL Expression
   45           | Expression OR Expression
   46           | Expression PLUS Expression
   47           | Expression MUL Expression
   48           | NOT Expression
   49           | MINUS Expression
   50           | IDENTIFIER
   51           | IDENTIFIER LBRACKET Expression RBRACKET
   52           | INT_LITERAL
   53           | CHAR_LITERAL
   54           | BOOL_LITERAL
   55           | DEREFERENCE Expression
   56           | NULLTOKEN

   57 Type: BOOLEAN
   58     | CHAR
   59     | INTEGER
   60     | INTPTR
   61     | CHARPTR

   62 Block: LBRACE Declarations Statements RBRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <u_base_charptr> (258) 4 9 10 21 26 27 28 50 51
    INT_LITERAL <u_base_int> (259) 16 52
    CHAR_LITERAL <u_base_int> (260) 53
    BOOL_LITERAL <u_base_int> (261) 54
    STRING_LITERAL <u_base_charptr> (262) 20
    BOOLEAN (263) 57
    CHAR (264) 58
    INTEGER (265) 59
    STRING (266) 16
    INTPTR (267) 60
    CHARPTR (268) 61
    IF (269) 22 23
    ELSE (270) 23
    WHILE (271) 24
    VAR (272) 15 16
    PROCEDURE (273) 4
    RETURN (274) 4 12
    NULLTOKEN (275) 56
    AND (276) 36
    DIV (277) 37
    EQUAL (278) 19 20 21
    EQUALS (279) 38
    GT (280) 39
    GTE (281) 40
    LT (282) 41
    LTE (283) 42
    MINUS (284) 43 49
    NOT (285) 48
    NOTEQUAL (286) 44
    OR (287) 45
    PLUS (288) 46
    MUL (289) 47
    AMP (290) 35
    DEREFERENCE (291) 28 55
    COMMA (292) 10 31
    COLON (293) 8 15 16
    LBRACE (294) 4 62
    RBRACE (295) 4 62
    SEMICOLON (296) 7 12 15 16 19 20 21
    LPAREN (297) 4 21 22 23 24 33
    RPAREN (298) 4 21 22 23 24 33
    BAR (299) 34
    LBRACKET (300) 16 27 51
    RBRACKET (301) 16 27 51


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program <u_program> (48)
        on left: 1
        on right: 0
    Procedures <u_proc_list> (49)
        on left: 2 3
        on right: 1 3 11
    Procedure <u_proc> (50)
        on left: 4
        on right: 1 3
    ParamList <u_decl_list> (51)
        on left: 5 6 7
        on right: 4 7
    Param <u_decl> (52)
        on left: 8
        on right: 6 7
    IDList <u_symname_list> (53)
        on left: 9 10
        on right: 8 10 15 16
    Body <u_procedure_block> (54)
        on left: 11
        on right: 4
    Return <u_return_stat> (55)
        on left: 12
        on right: 11
    Declarations <u_decl_list> (56)
        on left: 13 14
        on right: 11 14 62
    Declaration <u_decl> (57)
        on left: 15 16
        on right: 14
    Statements <u_stat_list> (58)
        on left: 17 18
        on right: 11 18 62
    Statement <u_stat> (59)
        on left: 19 20 21 22 23 24 25
        on right: 18
    LHS <u_lhs> (60)
        on left: 26 27 28
        on right: 19 20 21 35
    ExpressionListOpt <u_expr_list> (61)
        on left: 29 30
        on right: 21
    ExpressionList <u_expr_list> (62)
        on left: 31 32
        on right: 29 31
    Expression <u_expr> (63)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 12 19 22 23 24 27 31 32 33 34 36 37 38 39 40 41 42 43 44 45 46 47 48 49 51 55
    Type <u_type> (64)
        on left: 57 58 59 60 61
        on right: 4 8 15
    Block <u_nested_block> (65)
        on left: 62
        on right: 22 23 24 25


State 0

    0 $accept: • Program $end

    PROCEDURE  shift, and go to state 1

    Program    go to state 2
    Procedure  go to state 3


State 1

    4 Procedure: PROCEDURE • IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 5


State 3

    1 Program: Procedure • Procedures

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 2 (Procedures)

    Procedures  go to state 6
    Procedure   go to state 7


State 4

    4 Procedure: PROCEDURE IDENTIFIER • LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE

    LPAREN  shift, and go to state 8


State 5

    0 $accept: Program $end •

    $default  accept


State 6

    1 Program: Procedure Procedures •

    $default  reduce using rule 1 (Program)


State 7

    3 Procedures: Procedure • Procedures

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 2 (Procedures)

    Procedures  go to state 9
    Procedure   go to state 7


State 8

    4 Procedure: PROCEDURE IDENTIFIER LPAREN • ParamList RPAREN RETURN Type LBRACE Body RBRACE

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 5 (ParamList)

    ParamList  go to state 11
    Param      go to state 12
    IDList     go to state 13


State 9

    3 Procedures: Procedure Procedures •

    $default  reduce using rule 3 (Procedures)


State 10

    9 IDList: IDENTIFIER •
   10       | IDENTIFIER • COMMA IDList

    COMMA  shift, and go to state 14

    $default  reduce using rule 9 (IDList)


State 11

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList • RPAREN RETURN Type LBRACE Body RBRACE
    7 ParamList: ParamList • SEMICOLON Param

    SEMICOLON  shift, and go to state 15
    RPAREN     shift, and go to state 16


State 12

    6 ParamList: Param •

    $default  reduce using rule 6 (ParamList)


State 13

    8 Param: IDList • COLON Type

    COLON  shift, and go to state 17


State 14

   10 IDList: IDENTIFIER COMMA • IDList

    IDENTIFIER  shift, and go to state 10

    IDList  go to state 18


State 15

    7 ParamList: ParamList SEMICOLON • Param

    IDENTIFIER  shift, and go to state 10

    Param   go to state 19
    IDList  go to state 13


State 16

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN • RETURN Type LBRACE Body RBRACE

    RETURN  shift, and go to state 20


State 17

    8 Param: IDList COLON • Type

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 26


State 18

   10 IDList: IDENTIFIER COMMA IDList •

    $default  reduce using rule 10 (IDList)


State 19

    7 ParamList: ParamList SEMICOLON Param •

    $default  reduce using rule 7 (ParamList)


State 20

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN • Type LBRACE Body RBRACE

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 27


State 21

   57 Type: BOOLEAN •

    $default  reduce using rule 57 (Type)


State 22

   58 Type: CHAR •

    $default  reduce using rule 58 (Type)


State 23

   59 Type: INTEGER •

    $default  reduce using rule 59 (Type)


State 24

   60 Type: INTPTR •

    $default  reduce using rule 60 (Type)


State 25

   61 Type: CHARPTR •

    $default  reduce using rule 61 (Type)


State 26

    8 Param: IDList COLON Type •

    $default  reduce using rule 8 (Param)


State 27

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type • LBRACE Body RBRACE

    LBRACE  shift, and go to state 28


State 28

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE • Body RBRACE

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 2 (Procedures)

    Procedures  go to state 29
    Procedure   go to state 7
    Body        go to state 30


State 29

   11 Body: Procedures • Declarations Statements Return

    VAR  shift, and go to state 31

    $default  reduce using rule 13 (Declarations)

    Declarations  go to state 32
    Declaration   go to state 33


State 30

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body • RBRACE

    RBRACE  shift, and go to state 34


State 31

   15 Declaration: VAR • IDList COLON Type SEMICOLON
   16            | VAR • IDList COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    IDENTIFIER  shift, and go to state 10

    IDList  go to state 35


State 32

   11 Body: Procedures Declarations • Statements Return

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 17 (Statements)

    Statements  go to state 41
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 33

   14 Declarations: Declaration • Declarations

    VAR  shift, and go to state 31

    $default  reduce using rule 13 (Declarations)

    Declarations  go to state 45
    Declaration   go to state 33


State 34

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body RBRACE •

    $default  reduce using rule 4 (Procedure)


State 35

   15 Declaration: VAR IDList • COLON Type SEMICOLON
   16            | VAR IDList • COLON STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    COLON  shift, and go to state 46


State 36

   26 LHS: IDENTIFIER •
   27    | IDENTIFIER • LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 47

    $default  reduce using rule 26 (LHS)


State 37

   22 Statement: IF • LPAREN Expression RPAREN Block
   23          | IF • LPAREN Expression RPAREN Block ELSE Block

    LPAREN  shift, and go to state 48


State 38

   24 Statement: WHILE • LPAREN Expression RPAREN Block

    LPAREN  shift, and go to state 49


State 39

   28 LHS: DEREFERENCE • IDENTIFIER

    IDENTIFIER  shift, and go to state 50


State 40

   62 Block: LBRACE • Declarations Statements RBRACE

    VAR  shift, and go to state 31

    $default  reduce using rule 13 (Declarations)

    Declarations  go to state 51
    Declaration   go to state 33


State 41

   11 Body: Procedures Declarations Statements • Return

    RETURN  shift, and go to state 52

    Return  go to state 53


State 42

   18 Statements: Statement • Statements

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 17 (Statements)

    Statements  go to state 54
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 43

   19 Statement: LHS • EQUAL Expression SEMICOLON
   20          | LHS • EQUAL STRING_LITERAL SEMICOLON
   21          | LHS • EQUAL IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON

    EQUAL  shift, and go to state 55


State 44

   25 Statement: Block •

    $default  reduce using rule 25 (Statement)


State 45

   14 Declarations: Declaration Declarations •

    $default  reduce using rule 14 (Declarations)


State 46

   15 Declaration: VAR IDList COLON • Type SEMICOLON
   16            | VAR IDList COLON • STRING LBRACKET INT_LITERAL RBRACKET SEMICOLON

    BOOLEAN  shift, and go to state 21
    CHAR     shift, and go to state 22
    INTEGER  shift, and go to state 23
    STRING   shift, and go to state 56
    INTPTR   shift, and go to state 24
    CHARPTR  shift, and go to state 25

    Type  go to state 57


State 47

   27 LHS: IDENTIFIER LBRACKET • Expression RBRACKET

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 69


State 48

   22 Statement: IF LPAREN • Expression RPAREN Block
   23          | IF LPAREN • Expression RPAREN Block ELSE Block

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 70


State 49

   24 Statement: WHILE LPAREN • Expression RPAREN Block

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 71


State 50

   28 LHS: DEREFERENCE IDENTIFIER •

    $default  reduce using rule 28 (LHS)


State 51

   62 Block: LBRACE Declarations • Statements RBRACE

    IDENTIFIER   shift, and go to state 36
    IF           shift, and go to state 37
    WHILE        shift, and go to state 38
    DEREFERENCE  shift, and go to state 39
    LBRACE       shift, and go to state 40

    $default  reduce using rule 17 (Statements)

    Statements  go to state 72
    Statement   go to state 42
    LHS         go to state 43
    Block       go to state 44


State 52

   12 Return: RETURN • Expression SEMICOLON

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 73


State 53

   11 Body: Procedures Declarations Statements Return •

    $default  reduce using rule 11 (Body)


State 54

   18 Statements: Statement Statements •

    $default  reduce using rule 18 (Statements)


State 55

   19 Statement: LHS EQUAL • Expression SEMICOLON
   20          | LHS EQUAL • STRING_LITERAL SEMICOLON
   21          | LHS EQUAL • IDENTIFIER LPAREN ExpressionListOpt RPAREN SEMICOLON

    IDENTIFIER      shift, and go to state 74
    INT_LITERAL     shift, and go to state 59
    CHAR_LITERAL    shift, and go to state 60
    BOOL_LITERAL    shift, and go to state 61
    STRING_LITERAL  shift, and go to state 75
    NULLTOKEN       shift, and go to state 62
    MINUS           shift, and go to state 63
    NOT             shift, and go to state 64
    AMP             shift, and go to state 65
    DEREFERENCE     shift, and go to state 66
    LPAREN          shift, and go to state 67
    BAR             shift, and go to state 68

    Expression  go to state 76


State 56

   16 Declaration: VAR IDList COLON STRING • LBRACKET INT_LITERAL RBRACKET SEMICOLON

    LBRACKET  shift, and go to state 77


State 57

   15 Declaration: VAR IDList COLON Type • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 58

   50 Expression: IDENTIFIER •
   51           | IDENTIFIER • LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 79

    $default  reduce using rule 50 (Expression)


State 59

   52 Expression: INT_LITERAL •

    $default  reduce using rule 52 (Expression)


State 60

   53 Expression: CHAR_LITERAL •

    $default  reduce using rule 53 (Expression)


State 61

   54 Expression: BOOL_LITERAL •

    $default  reduce using rule 54 (Expression)


State 62

   56 Expression: NULLTOKEN •

    $default  reduce using rule 56 (Expression)


State 63

   49 Expression: MINUS • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 80


State 64

   48 Expression: NOT • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 81


State 65

   35 Expression: AMP • LHS

    IDENTIFIER   shift, and go to state 36
    DEREFERENCE  shift, and go to state 39

    LHS  go to state 82


State 66

   55 Expression: DEREFERENCE • Expression

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 83


State 67

   33 Expression: LPAREN • Expression RPAREN

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 84


State 68

   34 Expression: BAR • Expression BAR

    IDENTIFIER    shift, and go to state 58
    INT_LITERAL   shift, and go to state 59
    CHAR_LITERAL  shift, and go to state 60
    BOOL_LITERAL  shift, and go to state 61
    NULLTOKEN     shift, and go to state 62
    MINUS         shift, and go to state 63
    NOT           shift, and go to state 64
    AMP           shift, and go to state 65
    DEREFERENCE   shift, and go to state 66
    LPAREN        shift, and go to state 67
    BAR           shift, and go to state 68

    Expression  go to state 85


State 69

   27 LHS: IDENTIFIER LBRACKET Expression • RBRACKET
   36 Expression: Expression • AND Expression
   37           | Expression • DIV Expression
   38           | Expression • EQUALS Expression
   39           | Expression • GT Expression
   40           | Expression • GTE Expression
   41           | Expression • LT Expression
   42           | Expression • LTE Expression
   43           | Expression • MINUS Expression
   44           | Expression • NOTEQUAL Expression
   45           | Expression • OR Expression
   46           | Expression • PLUS Expression
   47           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RBRACKET  shift, and go to state 98


State 70

   22 Statement: IF LPAREN Expression • RPAREN Block
   23          | IF LPAREN Expression • RPAREN Block ELSE Block
   36 Expression: Expression • AND Expression
   37           | Expression • DIV Expression
   38           | Expression • EQUALS Expression
   39           | Expression • GT Expression
   40           | Expression • GTE Expression
   41           | Expression • LT Expression
   42           | Expression • LTE Expression
   43           | Expression • MINUS Expression
   44           | Expression • NOTEQUAL Expression
   45           | Expression • OR Expression
   46           | Expression • PLUS Expression
   47           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RPAREN    shift, and go to state 99


State 71

   24 Statement: WHILE LPAREN Expression • RPAREN Block
   36 Expression: Expression • AND Expression
   37           | Expression • DIV Expression
   38           | Expression • EQUALS Expression
   39           | Expression • GT Expression
   40           | Expression • GTE Expression
   41           | Expression • LT Expression
   42           | Expression • LTE Expression
   43           | Expression • MINUS Expression
   44           | Expression • NOTEQUAL Expression
   45           | Expression • OR Expression
   46           | Expression • PLUS Expression
   47           | Expression • MUL Expression

    AND       shift, and go to state 86
    DIV       shift, and go to state 87
    EQUALS    shift, and go to state 88
    GT        shift, and go to state 89
    GTE       shift, and go to state 90
    LT        shift, and go to state 91
    LTE       shift, and go to state 92
    MINUS     shift, and go to state 93
    NOTEQUAL  shift, and go to state 94
    OR        shift, and go to state 95
    PLUS      shift, and go to state 96
    MUL       shift, and go to state 97
    RPAREN    shift, and go to state 100


State 72

   62 Block: LBRACE Declarations Statements • RBRACE

    RBRACE  shift, and go to state 101


State 73

   12 Return: RETURN Expression • SEMICOLON
   36 Expression: Expression • AND Expression
   37           | Expression • DIV Expression
   38           | Expression • EQUALS Expression
   39           | Expression • GT Expression
   40           | Expression • GTE Expression
   41           | Expression • LT Expression
   42           | Expression • LTE Expression
   43           | Expression • MINUS Expression
   44           | Expression • NOTEQUAL Expression
   45           | Expression • OR Expression
   46           | Expression • PLUS Expression
   47           | Expression • MUL Expression

    AND        shift, and go to state 86
    DIV        shift, and go to state 87
    EQUALS     shift, and go to state 88
    GT         shift, and go to state 89
    GTE        shift, and go to state 90
    LT         shift, and go to state 91
    LTE        shift, and go to state 92
    MINUS      shift, and go to state 93
    NOTEQUAL   shift, and go to state 94
    OR         shift, and go to state 95
    PLUS       shift, and go to state 96
    MUL        shift, and go to state 97
    SEMICOLON  shift, and go to state 102


State 74

   21 Statement: LHS EQUAL IDENTIFIER • LPAREN ExpressionListOpt RPAREN SEMICOLON
   50 Expression: IDENTIFIER •
   51           | IDENTIFIER • LBRACKET Expression RBRACKET

    LPAREN    shift, and go to state 103
    LBRACKET  shift, and go to state 79

    $default  reduce using rule 50 (Expression)


State 75

   20 Statement: LHS EQUAL STRING_LITERAL • SEMICOLON

    SEMICOLON  shift, and go to state 104


State 76

   19 Statement: LHS EQUAL Expression • SEMICOLON
   36 Expression: Expression • AND Expression
   37           | Expression • DIV Expression
   38           | Expression • EQUALS Expression
   39           | Expression • GT Expression
   40           | Expression • GTE Expression
   41           | Expression • LT Expression
   42           | Expression • LTE Expression
   43           | Expression • MINUS Expression
   44           | Expression • NOTEQUAL Expression
   45           | Expression • OR Expression
   46           | Expression • PLUS Expression
   47           | Expression • MUL Expression
